Bug 135042 - Gallery: Incorrect Scrollbar behaviour after resizing the sidebar
Summary: Gallery: Incorrect Scrollbar behaviour after resizing the sidebar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-07-22 11:53 UTC by Xisco Faulí
Modified: 2020-09-29 15:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (534.84 KB, video/x-matroska)
2020-07-22 11:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-07-22 11:53:43 UTC
Created attachment 163402 [details]
screencast

Steps to reproduce:
1. Open Writer ( easier to reproduce if the user profile is removed beforehand )
2. Open the gallery
3. Increase the size of the sidebar
4. Scroll down to the bottom

-> The scrollbar doesn't reach the bottom. See screencast

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: b877b9bc894892e61f0d6311729f7b01139923d6
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-07-22 11:55:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5cce65171b12cd652d6a9857a9c0bad1c608a65c

author	Caolán McNamara <caolanm@redhat.com>	2020-06-14 19:54:20 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-06-14 21:55:24 +0200
commit 5cce65171b12cd652d6a9857a9c0bad1c608a65c (patch)
tree d2cb842c5c579e28cc7318f71462e9c4946fc0e6
parent b31bcdd8322b57dc0cd5b093b8f3e8e59b32c37e (diff)
Related: tdf#132966 scrollbar not tracking valueset cursor position

Bisected with: bibisect-linux64-7.1

Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2020-09-09 09:09:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ebfd1c859f9da4318999a145d6af0fd33372dc6b

tdf#135042 update scrolledwindow vadjustment when resized

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2020-09-09 09:16:01 UTC
that updates the scrollbar range on a resize, fixed in master, backport to 7-0 in gerrit
Comment 4 Commit Notification 2020-09-10 14:38:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/e7f829db91f4b9184cbfc29ca2b20050aac6e750

tdf#135042 update scrolledwindow vadjustment when resized

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-09-29 15:06:08 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: cd85546a2fbdade42f80fd3b6bd650791db9f32d
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: tr-TR (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!